// Copyright 2025 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buildbucket.v2;

option go_package = "go.chromium.org/luci/buildbucket/proto;buildbucketpb";

import "google/rpc/status.proto";

// BuildStageDetails is used as Stage.Attempt.details of a Turbo CI build stage.
//
// Turbo CI build stage is a stage that uses ScheduleBuildRequest as stage
// arguments. Such stages eventually result in creation of a Buildbucket build.
// Identifier of such a build (or failure to create it) is returned via
// BuildStageDetails.
message BuildStageDetails {
  oneof result {
    // ID identifies the build created to run the stage.
    int64 id = 1;
    // Set if the build creation failed.
    google.rpc.Status error = 2;
  }
}
